Reset sources for azure-security-attestation to the release version 1.1.28.